--- a/app/src/app/component/footer/footer.component.html
+++ b/app/src/app/component/footer/footer.component.html
@@ -1,1 +1,79 @@
-<p>footer works!</p>
+<footer class="bg-dark text-white p-5">
+  <div class="container">
+    <section class="">
+      <div class="row">
+        <div class="col-12 col-sm-4">
+          <h4 class="text-uppercase">Políticas</h4>
+
+          <a href="#!" class="text-white">Políticas de Privacidad</a>
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Políticas de cambio</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Políticas de envío</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Terminos y condiciones</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Responsabilid social</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-12 col-sm-4">
+          <h5 class="text-uppercase">Sobre Nosotros</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Encuentra tu tienda</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Contáctanos</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Trabaja con nosotros</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-12 col-sm-4">
+          <h5 class="text-uppercase">Síguenos en:</h5>
+          <a class="btn btn-light rounded-circle m-1" href="#!" role="button"
+            ><img
+              src="assets/svg/icon-facebook.svg"
+              height="20px"
+              alt="Facebook"
+            />
+          </a>
+          <a class="btn btn-light rounded-circle m-1" href="#!" role="button"
+            ><img
+              src="assets/svg/icon-twitter.svg"
+              height="20px"
+              alt="Twiter"
+            />
+          </a>
+          <a class="btn btn-light rounded-circle m-1" href="#!" role="button"
+            ><img
+              src="assets/svg/icon-instagram.svg"
+              height="20px"
+              alt="Instragram"
+            />
+          </a>
+          <a class="btn btn-light rounded-circle m-1" href="#!" role="button"
+            ><img
+              src="assets/svg/icon-youtube.svg"
+              height="20px"
+              alt="Youtube"
+            />
+          </a>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    © Copyright Colombia. Todos los derechos reservados
+  </div>
+</footer>
