--- a/app/src/app/component/header/header.component.html
+++ b/app/src/app/component/header/header.component.html
@@ -1,8 +1,23 @@
-<div class="row justify-content-center">
-  <div class="col">
-    <img src="assets/svg/logo.svg" width="300px" height="90px" alt="logo" />
+<div class="row justify-content-center bgc-white">
+  <div class="col-1 mx-3" id="nav-bar-header">
+    <img
+      src="assets/svg/icon-menu.svg"
+      id="menu"
+      width="40px"
+      height="90px"
+      alt="menu"
+    />
   </div>
-  <div class="col">
+  <div class="col px-3">
+    <img
+      src="assets/svg/logo.svg"
+      id="logo"
+      width="300px"
+      height="90px"
+      alt="logo"
+    />
+  </div>
+  <div class="col" id="btn-Search">
     <form class="d-flex">
       <input
         class="form-control me-2"
@@ -13,36 +28,19 @@
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
   </div>
-  <div class="col">iconos</div>
-</div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="#"> <strong> Hombre</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><strong> Mujer </strong> </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <strong> Junior </strong>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><strong>Niños</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#"
-            ><strong>Accesorios</strong></a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"> <strong>Ofertas</strong> </a>
-        </li>
-      </ul>
+  <div class="col">
+    <div class="row">
+      <div class="col-6">
+        <img
+          src="assets/svg/icon-cart.svg"
+          width="40px"
+          height="90px"
+          alt="cart"
+        />
+      </div>
+      <div class="col-6" id="btn-login">
+        <button class="btn btn-outline-dark">Iniciar sesión</button>
+      </div>
     </div>
   </div>
-</nav>
-<button class="btn btn-primary">btn</button>
+</div>
