--- a/app/src/app/component/nav-bar/nav-bar.component.html
+++ b/app/src/app/component/nav-bar/nav-bar.component.html
@@ -1,1 +1,35 @@
-<p>nav-bar works!</p>
+<div id="navbar-principalar" name="navbar-principalar">
+  <nav class="navbar navbar-expand-lg bg-dark">
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#"> <strong> Hombre</strong></a>
+        </li>
+        <hr />
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#"><strong> Mujer </strong> </a>
+        </li>
+        <hr />
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">
+            <strong> Junior </strong>
+          </a>
+        </li>
+        <hr />
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#"><strong>Niños</strong></a>
+        </li>
+        <hr />
+        <li class="nav-item">
+          <a class="nav-link text-white" aria-current="page" href="#"
+            ><strong>Accesorios</strong></a
+          >
+        </li>
+        <hr />
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#"> <strong>Ofertas</strong> </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
