--- a/app/src/app/home/home.component.html
+++ b/app/src/app/home/home.component.html
@@ -1,3 +1,29 @@
-<app-header></app-header>
-<app-nav-bar></app-nav-bar>
-<app-footer></app-footer>
+<div class="mt-5 pt-5">
+  <div class="fixed-top">
+    <app-header></app-header>
+    <app-nav-bar></app-nav-bar>
+  </div>
+  <div class="mt-5 pt-1">
+    <app-slide></app-slide>
+    <div class="row pt-4 pb-4">
+      <div class="col-12 col-sm-6 d-flex justify-content-center">
+        <img
+          class="img-fluid"
+          src="assets\img\banner-moda-infantil.jpg"
+          height="500px"
+          alt="Moda infantil"
+        />
+      </div>
+      <div class="col-12 col-sm-6 d-flex justify-content-center">
+        <img
+          class="img-fluid pt-4 pt-sm-0"
+          src="assets\img\banner-deportivo.jpg"
+          height="500px"
+          alt="eportivo"
+        />
+      </div>
+    </div>
+    <app-products-most-wanted></app-products-most-wanted>
+    <app-footer></app-footer>
+  </div>
+</div>
