--- a/app/src/app/component/products-most-wanted/products-most-wanted.component.html
+++ b/app/src/app/component/products-most-wanted/products-most-wanted.component.html
@@ -1,1 +1,23 @@
-<p>products-most-wanted works!</p>
+<div class="row">
+  <div class="col-1"></div>
+  <div class="col-10">
+    <div class="row">
+      <div class="col-12 text-center mb-5">
+        <strong>
+          <h1>PRODUSCTOS MÁS BUSCADOS</h1>
+        </strong>
+      </div>
+      <div class="col-12 text-center mb-2 mt-2">
+        <div class="row">
+          <div
+            class="col-12 col-lg-3 col-sm-6 pb-2"
+            *ngFor="let item of products"
+          >
+            <app-product-card [product]="item"></app-product-card>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-1"></div>
+</div>
