--- a/app/src/app/component/header/header.component.html
+++ b/app/src/app/component/header/header.component.html
@@ -17,20 +17,15 @@
       alt="logo"
     />
   </div>
-  <div class="col" id="btn-Search">
-    <form class="d-flex">
-      <input
-        class="form-control me-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
+  <div
+    class="col justify-content-center align-items-center d-flex"
+    id="btn-Search"
+  >
+    <app-search></app-search>
   </div>
   <div class="col">
     <div class="row">
-      <div class="col-6">
+      <div class="col-6 justify-content-center align-items-center d-flex">
         <img
           src="assets/svg/icon-cart.svg"
           width="40px"
@@ -38,7 +33,10 @@
           alt="cart"
         />
       </div>
-      <div class="col-6" id="btn-login">
+      <div
+        class="col-6 justify-content-center align-items-center d-flex"
+        id="btn-login"
+      >
         <button class="btn btn-outline-dark">Iniciar sesión</button>
       </div>
     </div>
