--- a/app/src/app/component/nav-bar/nav-bar.component.html
+++ b/app/src/app/component/nav-bar/nav-bar.component.html
@@ -1,6 +1,14 @@
 <div id="navbar-principalar" name="navbar-principalar">
   <nav class="navbar navbar-expand-lg bg-dark">
-    <div class="collapse navbar-collapse">
+    <div
+      class="
+        collapse
+        navbar-collapse
+        justify-content-center
+        align-items-center
+        d-flex
+      "
+    >
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link text-white" href="#"> <strong> Hombre</strong></a>
