--- a/app/src/app/component/product-card/product-card.component.html
+++ b/app/src/app/component/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 <div class="card card-size">
   <img
-    [src]="'https://http2.mlstatic.com/D_' + product.thumbnail_id + '-O.webp'"
+    [src]="product.thumbnail"
     class="card-img-top"
     height="300px"
     [alt]="product.title"
