--- a/app/src/app/component/search/search.component.html
+++ b/app/src/app/component/search/search.component.html
@@ -6,7 +6,7 @@
     type="search"
     placeholder="Buscar aquí producto"
   />
-  <button class="btn btn-outline-success" type="button" (click)="findProduct()">
-    lupa
+  <button class="btn btn-outline-dark" type="button" (click)="findProduct()">
+    <img src="assets/svg/search_black.svg" alt="buscar" />
   </button>
 </form>
